samples/_failures_safe/1761376190_771e86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_394845f5.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_394845f5.c:164:18: error: ‘TOKEN_’ undeclared (first use in this function)
  164 |             case TOKEN_
      |                  ^~~~~~
./samples/SAFE/__tmp_394845f5.c:164:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_394845f5.c:164:13: error: expected ‘:’ or ‘...’ at end of input
  164 |             case TOKEN_
      |             ^~~~
./samples/SAFE/__tmp_394845f5.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_394845f5.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_394845f5.c:164:13: error: expected declaration or statement at end of input
